--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .DS_Store
+node_modules
+.pytest_cache
+.terraform
+.terraform.tfstate.lock.info
+*.tfstate.backup
+credentials
+.pytest_cache
+**/**/.envrc
+*/**/.terraform
+*/**/.terraform.tfstate
+*/**/.terraform.lock.hcl
+*/**/terraform.tfstate
+/analytics/env
+**/**/__pycache__
