--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 757002793316.dkr.ecr.us-east-1.amazonaws.com
+      - cd analytics
   build:
     commands:
       - echo Build started on `date`
