--- a/analytics/deployment/deployment.yaml
+++ b/analytics/deployment/deployment.yaml
@@ -18,17 +18,16 @@ spec:
         - name: analytics
           image: 757002793316.dkr.ecr.us-east-1.amazonaws.com/analytics:latest
           imagePullPolicy: Always
-          env:
-            - name: APP_PORT
-              value: "5000"
-            - name: DB_USERNAME
-              value: postgres
-            - name: DB_HOST
-              value: postgresql.default.svc.cluster.local
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgresql
-                  key: postgres-password
+          envFrom:
+            - configMapRef:
+                name: app-config
+            - secretRef:
+                name: app-secret
+          # env:
+          #   - name: DB_PASSWORD
+          #     valueFrom:
+          #       secretKeyRef:
+          #         name: postgresql
+          #         key: postgres-password
           ports:
             - containerPort: 5000
