--- a/infra/deployment/local-storage.yaml
+++ b/infra/deployment/local-storage.yaml
@@ -11,7 +11,7 @@ metadata:
   name: local-storage
 spec:
   capacity:
-    storage: 10Gi
+    storage: 256Mi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
@@ -26,4 +26,4 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - ip-10-0-1-231.ec2.internal
+                - ip-10-0-1-172.ec2.internal
